Fix Colab notebook - use correct function names and parameters

--- a/SSZ_Qubits_Colab.ipynb
+++ b/SSZ_Qubits_Colab.ipynb
@@ -65,7 +65,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "print(\"SSZ-Qubits loaded successfully!\")\n",
-        "print(f\"Golden Ratio φ = {PHI}\")\n",
+        "print(f\"Golden Ratio phi = {PHI}\")\n",
         "print(f\"Speed of light c = {C} m/s\")"
       ]
     },
@@ -118,19 +118,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Compare SSZ and GR time dilation at different heights\n",
+        "# Compare SSZ time dilation at different heights\n",
         "heights = [0, 100, 1000, 10000, 35786000]  # meters (last is GPS orbit)\n",
         "names = [\"Sea level\", \"100m tower\", \"1km mountain\", \"10km airplane\", \"GPS satellite\"]\n",
         "\n",
-        "print(\"Height\\t\\t\\tSSZ Dilation\\t\\tGR Dilation\\t\\tDifference\")\n",
-        "print(\"=\"*80)\n",
+        "print(\"Height\\t\\t\\tSSZ Dilation\\t\\tXi\")\n",
+        "print(\"=\"*70)\n",
         "\n",
         "for h, name in zip(heights, names):\n",
         "    r = R_EARTH + h\n",
         "    d_ssz = ssz_time_dilation(r, M_EARTH)\n",
-        "    d_gr = gr_time_dilation(r, M_EARTH)\n",
-        "    diff = abs(d_ssz - d_gr)\n",
-        "    print(f\"{name:20s}\\t{d_ssz:.15f}\\t{d_gr:.15f}\\t{diff:.2e}\")"
+        "    xi = xi_segment_density(r, M_EARTH)\n",
+        "    print(f\"{name:20s}\\t{d_ssz:.15f}\\t{xi:.6e}\")"
       ]
     },
     {
@@ -156,9 +155,10 @@
         "\n",
         "print(\"Qubit Segment Analysis:\")\n",
         "print(f\"  Position: ({qubit.x}, {qubit.y}, {qubit.z}) m\")\n",
-        "print(f\"  Xi (segment density): {analysis['xi']:.6e}\")\n",
-        "print(f\"  Time dilation factor: {analysis['time_dilation']:.15f}\")\n",
-        "print(f\"  Effective clock rate: {analysis['effective_clock_rate']:.15f}\")"
+        "print(f\"  Xi (segment density): {analysis.xi:.6e}\")\n",
+        "print(f\"  Time dilation factor: {analysis.time_dilation:.15f}\")\n",
+        "print(f\"  Local time rate: {analysis.local_time_rate:.15f}\")\n",
+        "print(f\"  Segment gradient: {analysis.segment_gradient:.6e} 1/m\")"
       ]
     },
     {
@@ -180,15 +180,15 @@
         "q1 = Qubit(id=\"Q1\", x=0, y=0, z=0)\n",
         "q2 = Qubit(id=\"Q2\", x=0, y=0, z=0.001)  # 1mm higher\n",
         "\n",
-        "pair = QubitPair(qubit1=q1, qubit2=q2)\n",
+        "pair = QubitPair(qubit_a=q1, qubit_b=q2)\n",
         "\n",
         "# Calculate mismatch\n",
         "mismatch = qubit_pair_segment_mismatch(pair, M_EARTH)\n",
         "\n",
         "print(\"Qubit Pair Analysis (1mm height difference):\")\n",
-        "print(f\"  Height difference: {mismatch['height_diff']*1e6:.1f} μm\")\n",
+        "print(f\"  Height difference: {mismatch['height_diff']*1e6:.1f} um\")\n",
         "print(f\"  Xi difference: {mismatch['delta_xi']:.6e}\")\n",
-        "print(f\"  Time desync rate: {mismatch['desync_rate_ps_per_s']:.6f} ps/s\")\n",
+        "print(f\"  Time desync rate: {mismatch['time_desync_per_second']*1e12:.6f} ps/s\")\n",
         "print(f\"  Decoherence contribution: {mismatch['decoherence_contribution']:.6e}\")"
       ]
     },
@@ -206,19 +206,19 @@
       "outputs": [],
       "source": [
         "# Analyze effect of height difference on qubit pairs\n",
-        "height_diffs = np.logspace(-6, -2, 50)  # 1μm to 1cm\n",
+        "height_diffs = np.logspace(-6, -2, 50)  # 1um to 1cm\n",
         "desync_rates = []\n",
         "\n",
         "for dh in height_diffs:\n",
         "    q1 = Qubit(id=\"Q1\", x=0, y=0, z=0)\n",
         "    q2 = Qubit(id=\"Q2\", x=0, y=0, z=dh)\n",
-        "    pair = QubitPair(qubit1=q1, qubit2=q2)\n",
+        "    pair = QubitPair(qubit_a=q1, qubit_b=q2)\n",
         "    mismatch = qubit_pair_segment_mismatch(pair, M_EARTH)\n",
-        "    desync_rates.append(mismatch['desync_rate_ps_per_s'])\n",
+        "    desync_rates.append(mismatch['time_desync_per_second'] * 1e12)  # Convert to ps/s\n",
         "\n",
         "plt.figure(figsize=(10, 6))\n",
         "plt.loglog(height_diffs * 1e6, desync_rates, 'b-', linewidth=2)\n",
-        "plt.xlabel('Height Difference [μm]', fontsize=12)\n",
+        "plt.xlabel('Height Difference [um]', fontsize=12)\n",
         "plt.ylabel('Time Desync Rate [ps/s]', fontsize=12)\n",
         "plt.title('SSZ Qubit Pair Desynchronization vs Height Difference', fontsize=14)\n",
         "plt.grid(True, alpha=0.3)\n",
@@ -285,7 +285,7 @@
       "outputs": [],
       "source": [
         "# GPS Validation\n",
-        "# GPS satellites experience ~45 μs/day time difference\n",
+        "# GPS satellites experience ~45 us/day time difference\n",
         "gps_height = 20200e3  # 20,200 km\n",
         "r_gps = R_EARTH + gps_height\n",
         "\n",
@@ -297,9 +297,9 @@
         "time_diff_us = (d_gps - d_surface) * seconds_per_day * 1e6\n",
         "\n",
         "print(\"GPS Satellite Validation:\")\n",
-        "print(f\"  SSZ predicted time gain: {time_diff_us:.1f} μs/day\")\n",
-        "print(f\"  Expected (GR): ~45 μs/day\")\n",
-        "print(f\"  Status: {'✓ PASS' if 40 < time_diff_us < 50 else '✗ FAIL'}\")"
+        "print(f\"  SSZ predicted time gain: {time_diff_us:.1f} us/day\")\n",
+        "print(f\"  Expected (GR): ~45 us/day\")\n",
+        "print(f\"  Status: {'PASS' if 40 < time_diff_us < 50 else 'FAIL'}\")"
       ]
     },
     {
@@ -322,7 +322,7 @@
         "print(f\"  Height difference: {h_tower} m\")\n",
         "print(f\"  SSZ predicted shift: {fractional_shift:.2e}\")\n",
         "print(f\"  Expected: ~2.46e-15\")\n",
-        "print(f\"  Status: {'✓ PASS' if 2e-15 < fractional_shift < 3e-15 else '✗ FAIL'}\")"
+        "print(f\"  Status: {'PASS' if 2e-15 < fractional_shift < 3e-15 else 'FAIL'}\")"
       ]
     },
     {
@@ -342,15 +342,19 @@
       "source": [
         "# Calculate gate timing correction for a qubit\n",
         "qubit = Qubit(id=\"Q0\", x=0, y=0, z=1.0)\n",
-        "nominal_gate_time = 50e-9  # 50 ns nominal gate time\n",
         "\n",
-        "correction = ssz_gate_timing_correction(qubit, nominal_gate_time, M_EARTH)\n",
+        "# Get timing correction factor\n",
+        "correction_factor = gate_timing_correction(qubit, reference_height=0.0, M=M_EARTH)\n",
+        "\n",
+        "# Apply to nominal gate time\n",
+        "nominal_gate_time = 50e-9  # 50 ns\n",
+        "corrected_gate_time = nominal_gate_time * correction_factor\n",
         "\n",
         "print(\"Gate Timing Correction:\")\n",
         "print(f\"  Nominal gate time: {nominal_gate_time*1e9:.1f} ns\")\n",
-        "print(f\"  SSZ correction: {correction['correction_ps']:.6f} ps\")\n",
-        "print(f\"  Corrected gate time: {correction['corrected_time_ns']:.9f} ns\")\n",
-        "print(f\"  Relative correction: {correction['relative_correction']:.2e}\")"
+        "print(f\"  Correction factor: {correction_factor:.15f}\")\n",
+        "print(f\"  Corrected gate time: {corrected_gate_time*1e9:.9f} ns\")\n",
+        "print(f\"  Correction: {(correction_factor - 1)*1e15:.3f} x 10^-15\")"
       ]
     },
     {
@@ -380,7 +384,7 @@
         "\n",
         "Anti-Capitalist Software License v1.4\n",
         "\n",
-        "© 2025 Carmen Wrede & Lino Casu\n",
+        "Copyright 2025 Carmen Wrede & Lino Casu\n",
         "\n",
         "**Contact:** mail@error.wtf"
       ]
