Fix Colab notebook - use correct dict keys from qubit_pair_segment_mismatch

--- a/SSZ_Qubits_Colab.ipynb
+++ b/SSZ_Qubits_Colab.ipynb
@@ -186,10 +186,11 @@
         "mismatch = qubit_pair_segment_mismatch(pair, M_EARTH)\n",
         "\n",
         "print(\"Qubit Pair Analysis (1mm height difference):\")\n",
-        "print(f\"  Height difference: {mismatch['height_diff']*1e6:.1f} um\")\n",
-        "print(f\"  Xi difference: {mismatch['delta_xi']:.6e}\")\n",
-        "print(f\"  Time desync rate: {mismatch['time_desync_per_second']*1e12:.6f} ps/s\")\n",
-        "print(f\"  Decoherence contribution: {mismatch['decoherence_contribution']:.6e}\")"
+        "print(f\"  Height difference: {pair.height_difference*1e6:.1f} um\")\n",
+        "print(f\"  Delta Xi: {mismatch['delta_xi']:.6e}\")\n",
+        "print(f\"  Delta time dilation: {mismatch['delta_time_dilation']:.6e}\")\n",
+        "print(f\"  Phase drift per gate: {mismatch['phase_drift_per_gate']:.6e} rad\")\n",
+        "print(f\"  Decoherence enhancement: {mismatch['decoherence_enhancement']:.6f}\")"
       ]
     },
     {
@@ -207,23 +208,21 @@
       "source": [
         "# Analyze effect of height difference on qubit pairs\n",
         "height_diffs = np.logspace(-6, -2, 50)  # 1um to 1cm\n",
-        "desync_rates = []\n",
+        "delta_xis = []\n",
         "\n",
         "for dh in height_diffs:\n",
         "    q1 = Qubit(id=\"Q1\", x=0, y=0, z=0)\n",
         "    q2 = Qubit(id=\"Q2\", x=0, y=0, z=dh)\n",
         "    pair = QubitPair(qubit_a=q1, qubit_b=q2)\n",
         "    mismatch = qubit_pair_segment_mismatch(pair, M_EARTH)\n",
-        "    desync_rates.append(mismatch['time_desync_per_second'] * 1e12)  # Convert to ps/s\n",
+        "    delta_xis.append(mismatch['delta_xi'])\n",
         "\n",
         "plt.figure(figsize=(10, 6))\n",
-        "plt.loglog(height_diffs * 1e6, desync_rates, 'b-', linewidth=2)\n",
+        "plt.loglog(height_diffs * 1e6, delta_xis, 'b-', linewidth=2)\n",
         "plt.xlabel('Height Difference [um]', fontsize=12)\n",
-        "plt.ylabel('Time Desync Rate [ps/s]', fontsize=12)\n",
-        "plt.title('SSZ Qubit Pair Desynchronization vs Height Difference', fontsize=14)\n",
+        "plt.ylabel('Delta Xi (Segment Mismatch)', fontsize=12)\n",
+        "plt.title('SSZ Qubit Pair Segment Mismatch vs Height Difference', fontsize=14)\n",
         "plt.grid(True, alpha=0.3)\n",
-        "plt.axhline(y=0.01, color='r', linestyle='--', label='0.01 ps/s threshold')\n",
-        "plt.legend()\n",
         "plt.show()"
       ]
     },
